--- a/plasmoid/metadata.desktop
+++ b/plasmoid/metadata.desktop
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=PRIME Selector
+Name=SUSE Prime Selector
 Comment=Select between NVidia or Intel
 Type=Service
 
 X-KDE-ParentApp=
 X-KDE-PluginInfo-Author=pontos
 X-KDE-PluginInfo-Email=uhhadd@gmail.com
-X-KDE-PluginInfo-License=GPL
+X-KDE-PluginInfo-License=Unlicense
 X-KDE-PluginInfo-Name=org.kde.plasma.prime
 X-KDE-PluginInfo-Version=2.0
 X-KDE-PluginInfo-Website=plasma.kde.org
